<resources>
    <string name="app_name">EcoGrid</string>
    <string name="app_version">1.0.0</string>

    <string name="default_web_client_id">214665009344-ccgab8te4uva5bdk92jou7q15qfdv81q.apps.googleusercontent.com</string>

    <string name="activity_sign_in">SIGN IN</string>
    <string name="acticity_sign_up">SIGN UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_navigation_title">Navigation</string>
    <string name="bottom_nav_scanner_title">Scanner</string>
    <string name="bottom_nav_wallet_title">Wallet</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="side_nav_home_title">Home</string>
    <string name="side_nav_navigation_title">Navigation</string>
    <string name="side_nav_scanner_title">Scanners</string>
    <string name="side_nav_wallet_title">Wallet</string>
    <string name="side_nav_profile_title">Profile</string>
    <string name="side_nav_settings_title">Settings</string>
    <string name="side_nav_login_title">Login</string>
    <string name="side_nav_logout_title">Logout</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="facebook_app_id">1592483171826514</string>
    <string name="fb_login_protocol_scheme">fb1592483171826514</string>
    <string name="facebook_client_token">b4cc36713959f7356c46e53906458c47</string>
    <string name="activity_reset_now">RESET NOW</string>

    <string name="google_maps_key">AIzaSyAv70qGgSJQ3ndyoc_xKYFjmIOsicsQa2c</string>
    <string name="google_map_polyline_key">AIzaSyB7elpahjcdo215swS3b3FuWJ-sC0Brn5I</string>

    <string name="terms_text">
    1. Introduction\nBy using the EcoGrid app, you agree to comply with our terms of service. This app provides electric vehicle charging management services.\n\n
    2. Charging Sessions\nUsers are responsible for ensuring their vehicles are properly connected to the charging stations. EcoGrid is not responsible for any damage caused by faulty vehicle hardware.\n\n
    3. Payments\nAll payments are processed securely. Refunds are only issued in the event of a technical failure on our charging station\'s part.\n\n
    4. Data Privacy\nYour location and charging history are used to provide a better service. We do not sell your personal data to third parties.\n\n
    5. User Conduct\nUsers must not misuse the charging stations or attempt to bypass the payment systems.
    </string>
</resources>