<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/side_nav_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/side_nav_home"
            android:icon="@drawable/home_app_logo_24px"
            android:title="@string/side_nav_home_title"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_navigation"
            android:icon="@drawable/navigation_24px"
            android:title="@string/side_nav_navigation_title"
            android:visible="true"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_scanner"
            android:icon="@drawable/qr_code_scanner_24dp_e3e3e3_fill0_wght400_grad0_opsz24___copy"
            android:title="@string/side_nav_scanner_title"
            android:visible="true"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_wallet"
            android:icon="@drawable/wallet_24dp_e3e3e3_fill0_wght400_grad0_opsz24___copy"
            android:title="@string/side_nav_wallet_title"
            android:visible="true"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_profile"
            android:icon="@drawable/person_24dp_e3e3e3_fill0_wght400_grad0_opsz24___copy"
            android:title="@string/side_nav_profile_title"
            android:visible="true"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_settings"
            android:icon="@drawable/settings_24px"
            android:title="@string/side_nav_settings_title"
            android:visible="true"
            android:checkable="true"/>
    </group>

    <group android:id="@+id/side_nav_group_auth">
        <item
            android:id="@+id/side_nav_login"
            android:icon="@drawable/login_24px"
            android:title="@string/side_nav_login_title"
            android:visible="true"/>
        <item
            android:id="@+id/side_nav_logout"
            android:icon="@drawable/logout_24px"
            android:title="@string/side_nav_logout_title"
            android:visible="false"/>
    </group>

</menu>